// Copyright 2022 CeresDB Project Authors. Licensed under Apache-2.0.

// Common protos of analytic engine
syntax = "proto3";
package analytic_common;

// Options of a table that need to persist
message TableOptions {
    // Segment duration in ms.
    uint64 segment_duration = 1;
    bool enable_ttl = 2;
    uint64 ttl = 3;
    uint32 arena_block_size = 4;
    uint64 num_rows_per_row_group = 5;
    CompactionStrategy compaction_strategy= 6;
    CompactionOptions compaction_options = 7;
    UpdateMode update_mode = 8;
    uint32 write_buffer_size = 9;
    Compression compression = 10;
    // If sampling_segment_duration is true, then the segment duration
    // is still unknown.
    bool sampling_segment_duration = 11;
    StorageFormat storage_format = 12;
}

enum UpdateMode {
    Overwrite = 0;
    Append = 1;
}

enum StorageFormat {
    Columnar = 0;
    Hybrid = 1;
}

message CompactionOptions {
    // Options for STCS
    float bucket_low = 1;
    float bucket_high = 2;
    uint32 min_sstable_size = 3;
    uint32 min_threshold = 4;
    uint32 max_threshold = 5;
    // Options for TWCS
    TimeUnit timestamp_resolution = 6;
}

enum TimeUnit {
    NANOSECONDS = 0;
    MICROSECONDS = 1;
    MILLISECONDS = 2;
    SECONDS = 3;
    MINUTES = 4;
    HOURS = 5;
    DAYS = 6;
}

enum CompactionStrategy {
    DEFAULT = 0;
    SIZE_TIERED = 1;
    TIME_WINDOW = 2;
}

enum Compression {
    UNCOMPRESSED = 0;
    LZ4 = 1;
    SNAPPY = 2;
    ZSTD = 3;
}
